# yh-template

./: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug-issue-template.md  feature-request-template.md
configs/: data.yaml  feature.yaml  model.yaml  train.yaml
demo/: style.css
demo/.streamlit/: config.toml
notebooks/: Ch1-Markdown.ipynb  Ch2-Python programming.ipynb  Ch3-Numpy.ipynb  Ch4-Pandas.ipynb  Ch5-Exercise1.ipynb  Ch6-Data visualization.ipynb  Ch7-Machine learning (기본이론).ipynb  Ch8-Machine learning (Clasification).ipynb  Ch9-Machine learning (Regression).ipynb
notebooks/data/: 02_production.csv
src/my_pkg/: test.py
src/my_pkg/my_module/: math.py
src/my_pkg/utils/: config_loader.py  path.py  settings.py
src/pwc_pjt/analysis/: visualize.py
src/pwc_pjt/utils/: config_loader.py
