[project]
name = "my-project"
version = "1.0.0"
description = "pwc starter guide onboarding"
requires-python = ">=3.11,<3.12"
readme = "README.md"
authors = [
    { name = "송영희", email = "younghee.song@pwc.com" } # Optional
]
maintainers = [
    { name = "송영희", email = "younghee.song@pwc.com" } # Optional
]

[build-system]
# Minimum requirements for the build system to execute, according to PEP-508
requires = [
    "build>=0.7",
    "wheel>=0.37,<0.40",
    "setuptools<67.6.1"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 105
target-version = ["py311"]
exclude = ""

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ""

[project.optional-dependencies]
dev = [
    "black >= 23.7.0",
    "isort >= 5.12.0",
    "pre-commit >= 3.3.3",
]
